...
      return;
    }
    setPage(page + 1);
    fetchHistoryUpdates();
  };
  return (
    <View style={styles.container} testID='historyUpdateScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={historyUpdateList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
