...
      return;
    }
    setPage(page + 1);
    fetchImages();
  };
  return (
    <View style={styles.container} testID='imageScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={imageList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
